# simple-neural-search

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: app.py  neural_searcher.py  save_vectors.py  upload_vectors.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
